src/test/ui/consts/const-tup-index-span.stderr
error[E0308]: mismatched types
  --> $DIR/const-tup-index-span.rs:3:23
   |
LL | const TUP: (usize,) = 5usize << 64;
   |                       ^^^^^^^^^^^^ expected tuple, found `usize`
   |
   = note: expected tuple `(usize,)`
               found type `usize`
help: use a trailing comma to create a tuple with one element
   |
LL | const TUP: (usize,) = (5usize << 64,);
   |                       +            ++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
